--- a/blogpost.html
+++ b/blogpost.html
@@ -13,15 +13,19 @@
     <span id="tagline">Tu blog de Confianza</span>
     </div>
     <div id="post">
-    <h1>Este es el titulo atractivo e interasente del post</h1>
+    <h1>Este es el título atractivo e interasente del post</h1>
     <p>Y este es el parrafo de inicio donde vamos a explicar 
    las cosas incréibles que se pueden hacer con ramas
 </p>
+<!-- <p><img src="imagenes/equipo.jpg" width="100%"> </p> -->
 <p>
-    Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadí­sticamente no lo eres.... por ahora.
+    Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.
 </p>
 <p>Suscribete y dale like</p>
 </div>
+<div id="footer">
+    Hecho con amor en Platzi 💚
+    </div>
 </div>
 
 </body>
